# uCli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/Commands/: ShellCompleteHandler.rs  TokenCommandHandler.rs  mod.rs
