[package]
name = "uCli"
version = "0.1.0"
authors = ["meduo <meduo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-beta.2"}
tokio = { version = "1.2", features = ["full"] }
reqwest = { version = "0.11.1", features = ["json"] }
clap_generate = {version = "3.0.0-beta.2"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = { version = "0.4" }